examples/experimental/v1alpha3/tls-routing/tls-route.yaml
# Copyright IBM Corp. 2019, 2022
# SPDX-License-Identifier: Apache-2.0

apiVersion: gateway.networking.k8s.io/v1alpha3
kind: TLSRoute
metadata:
  name: example-route
spec:
  parentRefs:
  - name: example-gateway
    sectionName: tls
  hostnames:
  - "example.com"
  rules:
  - backendRefs:
    - name: example-svc
      port: 443
